# fastapidjango

./: README.md
djangorestapi/: db.sqlite3  pyproject.toml
djangorestapi/cursos/: admin.py  models.py  serializers.py  urls.py  views.py
djangorestapi/cursos/migrations/: 0001_initial.py  0002_professor.py  0003_alter_professor_registro.py  0004_alter_avaliacao_options_alter_curso_options_and_more.py
djangorestapi/cursos/static/css/: styles.css
djangorestapi/cursos/templates/: index.html
djangorestapi/djangorestapi/: settings.py  urls.py
