[tool.poetry]
name = "djangorestapi"
version = "0.1.0"
description = ""
authors = ["Vinicius Garcia <vinicius.garcia.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
taskipy = "^1.13.0"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
run = 'python manage.py runserver'
migrations = 'python manage.py makemigrations'
migrate = 'python manage.py migrate'

